<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/mine_title"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imv_mine_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_mine_pic"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imv_mine_pic"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_mine_name"
                android:text="余生陪你去浪费"
                android:textSize="16sp"
                android:textColor="@color/colorLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/imv_mine_write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/icon_mine_write"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_mine_num"
            android:layout_below="@+id/ll_mine"
            android:text="+86 18251853275"
            android:textSize="14sp"
            android:textColor="@color/colorGray"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_mine_message"
        android:layout_marginTop="29dp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <ImageView
            android:src="@mipmap/icon_mine_message"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_message"
            android:textColor="@color/colorMineText"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:layout_marginLeft="35dp"
            android:gravity="center|left"/>

        <ImageView
            android:src="@mipmap/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <RelativeLayout
        android:id="@+id/rl_mine_user"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <ImageView
            android:src="@mipmap/icon_mine_user"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_user"
            android:textColor="@color/colorMineText"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:layout_marginLeft="35dp"
            android:gravity="center|left"/>

        <ImageView
            android:src="@mipmap/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
    <RelativeLayout
        android:id="@+id/rl_mine_setting"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <ImageView
            android:src="@mipmap/icon_mine_setting"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_setting"
            android:textColor="@color/colorMineText"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:layout_marginLeft="35dp"
            android:gravity="center|left"/>

        <ImageView
            android:src="@mipmap/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <RelativeLayout
        android:id="@+id/rl_mine_version"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <ImageView
            android:src="@mipmap/icon_mine_version"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_version"
            android:textColor="@color/colorMineText"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:layout_marginLeft="35dp"
            android:gravity="center|left"/>

        <TextView
            android:id="@+id/tv_mine_version"
            android:text="V1.0.0"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />

        <ImageView
            android:src="@mipmap/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <RelativeLayout
        android:id="@+id/rl_mine_about"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <ImageView
            android:src="@mipmap/icon_mine_about"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_about"
            android:textColor="@color/colorMineText"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:layout_marginLeft="35dp"
            android:gravity="center|left"/>

        <ImageView
            android:src="@mipmap/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"

            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
</LinearLayout>